// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fsHandler nest REPLACE_NODE 1`] = `
"import React, { StrictMode } from \\"react\\"
import Tabs from \\"antd/es/tabs\\"
import \\"antd/es/tabs/style/index.css\\"

type Props = {}

const array = new Array(100).fill(1)

export default function App(props: Props) {
  return (
    <div>
      <h1 title={\\"abc\\"}>Hello World👌</h1>
      <Tabs>
        <Tabs.TabPane key={\\"tool\\"} tab={\\"物料\\"}>
          <p className=\\"empty\\"></p>
          <p>simple 66xxxxxasdasdas6</p>
          <p>
            nested 2<strong>hahahax</strong>
          </p>
          {array.map((x, i) => (
            <p key={i}>物料_{i}</p>
          ))}
        </Tabs.TabPane>
        <Tabs.TabPane key={\\"attr\\"} tab={\\"属性\\"}></Tabs.TabPane>
      </Tabs>
    </div>
  )
}"
`;

exports[`fsHandler spec case 1`] = `
"import React, { StrictMode } from \\"react\\"
import Tabs from \\"antd/es/tabs\\"
import \\"antd/es/tabs/style/index.css\\"

type Props = {
  x: string
}

const array = new Array(100).fill(1)

export default function App(props: Props) {
  return (
    <div>
      <h1 title={\\"abc\\"}>Hello World</h1>
      <Tabs>
        <Tabs.TabPane key={\\"tool\\"} tab={\\"物料\\"}>
          <p className=\\"empty\\"></p>
          {array.map((x, i) => (
            <p key={i}>物料__{i}</p>
          ))}
        </Tabs.TabPane>
        <Tabs.TabPane key={\\"attr\\"} tab={\\"属性\\"}></Tabs.TabPane>
      </Tabs>
    </div>
  )
}"
`;

exports[`fsHandler spec case DEL 1`] = `
"import React, { StrictMode } from \\"react\\"
import Tabs from \\"antd/es/tabs\\"
import \\"antd/es/tabs/style/index.css\\"

type Props = {
  x: string
}

const array = new Array(100).fill(1)

export default function App(props: Props) {
  return (
    <div>
      <h1 title={\\"abc\\"}>Hello World</h1>
      <Tabs>
        <Tabs.TabPane key={\\"tool\\"} tab={\\"物料\\"}>
          <p className=\\"empty\\"></p>
          {array.map((x, i) => (
            <p key={i}>物料__{i}</p>
          ))}
        </Tabs.TabPane>
        <Tabs.TabPane key={\\"attr\\"} tab={\\"属性\\"}></Tabs.TabPane>
      </Tabs>
    </div>
  )
}"
`;

exports[`fsHandler spec case REPLACE_NODE 1`] = `
"import React, { StrictMode } from \\"react\\"
import Tabs from \\"antd/es/tabs\\"
import \\"antd/es/tabs/style/index.css\\"

type Props = {
  x: string
}

const array = new Array(100).fill(1)

export default function App(props: Props) {
  return (
    <div>
      <h1 title={\\"abc\\"}>Hello World</h1>
      <Tabs>
        <Tabs.TabPane key={\\"tool\\"} tab={\\"物料\\"}>
          <p className=\\"empty\\"></p>
          <span>ppp</span>
          {array.map((x, i) => (
            <p key={i}>物料__{i}</p>
          ))}
        </Tabs.TabPane>
        <Tabs.TabPane key={\\"attr\\"} tab={\\"属性\\"}></Tabs.TabPane>
      </Tabs>
    </div>
  )
}"
`;
